--- a/etc/api-paste.ini
+++ b/etc/api-paste.ini
@@ -70,7 +70,7 @@ use = egg:Paste#urlmap
 /v1.0: openstackapi
 
 [pipeline:openstackapi]
-pipeline = faultwrap auth ratelimit osapiapp
+pipeline = faultwrap auth ratelimit extensions osapiapp
 
 [filter:faultwrap]
 paste.filter_factory = nova.api.openstack:FaultWrapper.factory
@@ -80,6 +80,9 @@ paste.filter_factory = nova.api.openstack.auth:AuthMiddleware.factory
 
 [filter:ratelimit]
 paste.filter_factory = nova.api.openstack.ratelimiting:RateLimitingMiddleware.factory
+
+[filter:extensions]
+paste.filter_factory = nova.api.openstack.extensions:ExtensionsRouter.factory
 
 [app:osapiapp]
 paste.app_factory = nova.api.openstack:APIRouter.factory
